# iter-codex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
examples/: TASK.md  plan.md
scripts/: invoke-codex-agent.sh  run-local.sh
src/codex_self_iter/: __init__.py  __main__.py  config.py  prompts.py  runner.py
tests/: test_runner.py
