[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-self-iter"
version = "0.1.0"
description = "Self-iterating autonomous coding loop for Codex-style agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "WTFPL"}
authors = [
  {name = "Dremig"}
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
codex-self-iter = "codex_self_iter.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
